IllinoisGRMHD: the_conservative_to_primitive_algorithm -- Completed the discussion on the harm_primitives_lowlevel.C file

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.ipynb
@@ -68,6 +68,10 @@
     "        1. [Step 3.a.vi](#variables_needed_by_harm__conservs): Writing $\\boldsymbol{C}_{\\rm HARM}$ in terms of $\\boldsymbol{C}_{\\rm IGM}$\n",
     "        1. [Step 3.a.vii](#variables_needed_by_harm__prims): Writing $\\boldsymbol{P}_{\\rm HARM}$ in terms of $\\boldsymbol{P}_{\\rm IGM}$\n",
     "    1. [Step 3.b](#calling_harm_conservs_to_prims_solver): *Calling the `HARM` conservative-to-primitive solver*\n",
+    "    1. [Step 3.c](#font_fix) *Applying the Font *et al.* fix, if the inversion fails*\n",
+    "    1. [Step 3.d](#compute_utconi) *Compute $\\tilde{u}^{i}$*\n",
+    "    1. [Step 3.e](#limiting_velocities) *Limiting velocities*\n",
+    "    1. [Step 3.f](#primitives) *Setting the primitives*\n",
     "1. [Step 4](#harm_primitives_headers): **`harm_primitives_headers.h`**\n",
     "1. [Step 5](#code_validation): **Code validation**\n",
     "    1. [Step 5.a](#driver_conserv_to_prims_validation): *`driver_conserv_to_prims.C`*\n",
@@ -148,7 +152,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/driver_conserv_to_prims.C\n"
+      "Overwriting ../src/driver_conserv_to_prims.C\n"
      ]
     }
    ],
@@ -1127,35 +1131,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing ../src/harm_primitives_lowlevel.C\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile $outfile_path__harm_primitives_lowlevel__C\n",
-    "inline int harm_primitives_gammalaw_lowlevel(const int index,const int i,const int j,const int k,CCTK_REAL *X,CCTK_REAL *Y,CCTK_REAL *Z,\n",
-    "                                             CCTK_REAL *METRIC,CCTK_REAL *METRIC_PHYS,CCTK_REAL *METRIC_LAP_PSI4,\n",
-    "                                             CCTK_REAL *CONSERVS,CCTK_REAL *PRIMS,\n",
-    "                                             CCTK_REAL g4dn[NDIM][NDIM],CCTK_REAL g4up[NDIM][NDIM],\n",
-    "                                             struct output_stats &stats, eos_struct &eos) {\n",
-    "\n",
-    "  DECLARE_CCTK_PARAMETERS;\n",
-    "\n",
-    "  CCTK_REAL kpoly = eos.k_tab[0];\n",
-    "  CCTK_REAL gamma = eos.gamma_tab[0];\n",
-    "  int gamma_equals2 = 1;\n",
-    "  if (fabs(gamma-2.0) > 1.e-10) gamma_equals2 = 0;"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1178,6 +1153,35 @@
     "$$\n",
     "\\boxed{\\sqrt{-g} = \\alpha\\sqrt{\\gamma} = \\alpha\\psi^{6}}\\ .\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ../src/harm_primitives_lowlevel.C\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile $outfile_path__harm_primitives_lowlevel__C\n",
+    "inline int harm_primitives_gammalaw_lowlevel(const int index,const int i,const int j,const int k,CCTK_REAL *X,CCTK_REAL *Y,CCTK_REAL *Z,\n",
+    "                                             CCTK_REAL *METRIC,CCTK_REAL *METRIC_PHYS,CCTK_REAL *METRIC_LAP_PSI4,\n",
+    "                                             CCTK_REAL *CONSERVS,CCTK_REAL *PRIMS,\n",
+    "                                             CCTK_REAL g4dn[NDIM][NDIM],CCTK_REAL g4up[NDIM][NDIM],\n",
+    "                                             struct output_stats &stats, eos_struct &eos) {\n",
+    "\n",
+    "  DECLARE_CCTK_PARAMETERS;\n",
+    "\n",
+    "  CCTK_REAL kpoly = eos.k_tab[0];\n",
+    "  CCTK_REAL gamma = eos.gamma_tab[0];\n",
+    "  int gamma_equals2 = 1;\n",
+    "  if (fabs(gamma-2.0) > 1.e-10) gamma_equals2 = 0;"
    ]
   },
   {
@@ -1709,10 +1713,16 @@
    "source": [
     "<a id='font_fix'></a>\n",
     "\n",
-    "## Step 3.c: Applying Font *et al.* fix, if the inversion fails \\[Back to [top](#toc)\\]\n",
+    "## Step 3.c: Applying the Font *et al.* fix, if the inversion fails \\[Back to [top](#toc)\\]\n",
     "$$\\label{font_fix}$$\n",
     "\n",
-    "If the conservative-to-primitive solver fails, then we apply the procedure suggested by [Font *et al.*]() (***CITATION NEEDED***)."
+    "If the conservative-to-primitive solver fails to converge, we apply the procedure suggested by [Font *et al.* (1998)](https://arxiv.org/abs/gr-qc/9811015). The algorithm can be summarized as the requirement that\n",
+    "\n",
+    "$$\n",
+    "P=P_{\\rm cold} = \\kappa \\rho^{\\Gamma_{\\rm cold}}_{b}\\ ,\n",
+    "$$\n",
+    "\n",
+    "and then recomputing the velocities $u_{i}$. We will describe this procedure in detail in [Step 4](#font_fix_gamma_law__c) below."
    ]
   },
   {
@@ -1741,7 +1751,50 @@
     "        check = font_fix_gamma_equals2(u_xl,u_yl,u_zl,CONSERVS,PRIMS,METRIC_PHYS,METRIC_LAP_PSI4,eos);\n",
     "      } else {\n",
     "        check = font_fix_general_gamma(u_xl,u_yl,u_zl,CONSERVS,PRIMS,METRIC_PHYS,METRIC_LAP_PSI4,eos);\n",
-    "      }\n",
+    "      }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='compute_utconi'></a>\n",
+    "\n",
+    "## Step 3.d: Compute $\\tilde{u}^{i}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{compute_utconi}$$\n",
+    "\n",
+    "Now we evaluate\n",
+    "\n",
+    "$$\n",
+    "\\tilde{u}^{i} = \\gamma^{ij}u_{i} \\implies\n",
+    "\\boxed{\n",
+    "\\left\\{\n",
+    "\\begin{align}\n",
+    "\\tilde{u}^{x} &= \\gamma^{xx}u_{x} + \\gamma^{xy}u_{y} + \\gamma^{xz}u_{z}\\\\\n",
+    "\\tilde{u}^{y} &= \\gamma^{yx}u_{x} + \\gamma^{yy}u_{y} + \\gamma^{yz}u_{z}\\\\\n",
+    "\\tilde{u}^{z} &= \\gamma^{zx}u_{x} + \\gamma^{zy}u_{y} + \\gamma^{zz}u_{z}\n",
+    "\\end{align}\n",
+    "\\right.\n",
+    "}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/harm_primitives_lowlevel.C\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a $outfile_path__harm_primitives_lowlevel__C\n",
+    "\n",
     "      //Translate to HARM primitive now:\n",
     "      prim[UTCON1] = METRIC_PHYS[GUPXX]*u_xl + METRIC_PHYS[GUPXY]*u_yl + METRIC_PHYS[GUPXZ]*u_zl;\n",
     "      prim[UTCON2] = METRIC_PHYS[GUPXY]*u_xl + METRIC_PHYS[GUPYY]*u_yl + METRIC_PHYS[GUPYZ]*u_zl;\n",
@@ -1753,7 +1806,37 @@
     "    }\n",
     "    stats.failure_checker+=font_fix_applied*10000;\n",
     "    stats.font_fixed=font_fix_applied;\n",
-    "    /*************************************************************/\n",
+    "    /*************************************************************/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='limiting_velocities'></a>\n",
+    "\n",
+    "## Step 3.e: Limiting velocities \\[Back to [top](#toc)\\]\n",
+    "$$\\label{limiting_velocities}$$\n",
+    "\n",
+    "The procedure we follow here is similar to the one discussed in the [inlined functions tutorial module](#Tutorial-IllinoisGRMHD__inlined_functions.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/harm_primitives_lowlevel.C\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a $outfile_path__harm_primitives_lowlevel__C\n",
+    "\n",
     "\n",
     "    if(check==0) {\n",
     "      //Now that we have found some solution, we first limit velocity:\n",
@@ -1784,7 +1867,47 @@
     "        prim[RHO] =  rho_star_orig/(METRIC_LAP_PSI4[LAPSE]*u0L*METRIC_LAP_PSI4[PSI6]);\n",
     "        stats.vel_limited=1;\n",
     "        stats.failure_checker+=1000;\n",
-    "      } //Finished limiting velocity\n",
+    "      } //Finished limiting velocity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='primitives'></a>\n",
+    "\n",
+    "## Step 3.f: Setting the primitives \\[Back to [top](#toc)\\]\n",
+    "$$\\label{primitives}$$\n",
+    "\n",
+    "Finally, we update the primitives,\n",
+    "\n",
+    "$$\n",
+    "\\boxed{\n",
+    "\\begin{align}\n",
+    "\\rho_{b} &= \\rho\\\\\n",
+    "P &= \\left(\\Gamma - 1\\right)u = P_{\\rm cold}\\\\\n",
+    "v^{i} &= \\frac{\\tilde{u}^{i}}{u^{0}} - \\beta^{i}\n",
+    "\\end{align}\n",
+    "}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/harm_primitives_lowlevel.C\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a $outfile_path__harm_primitives_lowlevel__C\n",
+    "\n",
     "\n",
     "      //The Font fix only sets the velocities.  Here we set the pressure & density HARM primitives.\n",
     "      if(font_fix_applied==1) {\n",
@@ -1827,22 +1950,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='font_fix_gamma_law__c'></a>\n",
+    "\n",
+    "# Step 4: `font_fix_gamma_law.C` \\[Back to [top](#toc)\\]\n",
+    "$$\\label{font_fix_gamma_law__c}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='harm_primitives_headers'></a>\n",
     "\n",
-    "# Step 4: `harm_primitives_headers.h` \\[Back to [top](#toc)\\]\n",
+    "# Step 5: `harm_primitives_headers.h` \\[Back to [top](#toc)\\]\n",
     "$$\\label{harm_primitives_headers}$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/harm_primitives_headers.h\n"
+      "Overwriting ../src/harm_primitives_headers.h\n"
      ]
     }
    ],
@@ -1993,7 +2126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2063,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2129,7 +2262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2196,24 +2329,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 131175 bytes to Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.tex\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n"
+      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.ipynb to latex\n",
+      "[NbConvertApp] Writing 134830 bytes to Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
      ]
     }
    ],
