--- a/Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
+++ b/Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
@@ -4,15 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<script async src=\"https://www.googletagmanager.com/gtag/js?id=UA-59152712-8\"></script>\n",
-    "<script>\n",
-    "  window.dataLayer = window.dataLayer || [];\n",
-    "  function gtag(){dataLayer.push(arguments);}\n",
-    "  gtag('js', new Date());\n",
-    "\n",
-    "  gtag('config', 'UA-59152712-8');\n",
-    "</script>\n",
-    "\n",
     "# Converting *Exact* ADM Initial Data in the Spherical or Cartesian Basis to BSSN Initial Data in the Desired Curvilinear Basis\n",
     "## Author: Zach Etienne\n",
     "### Formatting improvements courtesy Brandon Clark\n",
@@ -49,6 +40,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc'></a>\n",
+    "\n",
     "# Table of Contents\n",
     "$$\\label{toc}$$ \n",
     "\n",
@@ -56,16 +49,11 @@
     "\n",
     "1. [Step 1](#initializenrpy): Initialize core Python/NRPy+ modules\n",
     "1. [Step 2](#cylindrical): Desired output BSSN Curvilinear coordinate system set to Cylindrical, as a proof-of-principle\n",
-    "1. [Step 3](#admfunc): Converting ADM variables to functions of (`xx0,xx1,xx2`)\n",
+    "1. [Step 3](#admxx0xx1xx2): Converting ADM variables to functions of (`xx0,xx1,xx2`)\n",
     "1. [Step 4](#adm_jacobian): Applying Jacobian transformations to get in the correct `xx0,xx1,xx2` basis\n",
-    "1. [Step 5](#adm2bssn): Perform the ADM-to-BSSN conversion for 3-metric, extrinsic curvature, and gauge quantities\n",
-    "    1. [Step 5.a](#adm2bssn_gamma): Convert ADM $\\gamma_{ij}$ to BSSN $\\bar{\\gamma}_{ij}$\n",
-    "    1. [Step 5.b](#admexcurv_convert): Convert the ADM extrinsic curvature $K_{ij}$\n",
-    "    1. [Step 5.c](#lambda): Define $\\bar{\\Lambda}^i$\n",
-    "    1. [Step 5.d](#conformal): Define the conformal factor variable `cf`\n",
-    "1. [Step 6](#rescale): Rescale tensorial quantities\n",
-    "1. [Step 7](#code_validation): Code Validation against `BSSN.ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear` NRPy+ module\n",
-    "1. [Step 8](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
+    "1. [Step 5](#adm2bssn): Call functions within [`BSSN.BSSN_in_terms_of_ADM.BSSN_in_terms_of_ADM`](../edit/BSSN/BSSN_in_terms_of_ADM.py) ([**tutorial**](BSSN_in_terms_of_ADM.ipynb)) to perform the ADM-to-BSSN conversion\n",
+    "1. [Step 6](#code_validation): Code Validation against `BSSN.ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear` NRPy+ module\n",
+    "1. [Step 7](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
    ]
   },
   {
@@ -75,7 +63,7 @@
     "<a id='initializenrpy'></a>\n",
     "\n",
     "# Step 1: Initialize core Python/NRPy+ modules \\[Back to [top](#toc)\\]\n",
-    "$$\\label{initializenrpy}$$\n"
+    "$$\\label{initializenrpy}$$"
    ]
   },
   {
@@ -135,10 +123,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='admfunc'></a>\n",
+    "<a id='admxx0xx1xx2'></a>\n",
     "\n",
     "# Step 3: Converting ADM variables to functions of ${\\rm xx0},{\\rm xx1},{\\rm xx2}$ \\[Back to [top](#toc)\\]\n",
-    "$$\\label{admfunc}$$\n",
+    "$$\\label{admxx0xx1xx2}$$\n",
     "\n",
     "ADM variables are given as functions of $(r,\\theta,\\phi)$ or $(x,y,z)$. We convert them to functions of `(xx0,xx1,xx2)` using SymPy's `subs()` function."
    ]
@@ -149,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 1: All input quantities are in terms of r,th,ph or x,y,z. We want them in terms \n",
+    "# Step 3: All input quantities are in terms of r,th,ph or x,y,z. We want them in terms \n",
     "#         of xx0,xx1,xx2, so here we call sympify_integers__replace_rthph() to replace\n",
     "#         r,th,ph or x,y,z, respectively, with the appropriate functions of xx0,xx1,xx2\n",
     "#         as defined for this particular reference metric in reference_metric.py's \n",
@@ -274,27 +262,10 @@
    "source": [
     "<a id='adm2bssn'></a>\n",
     "\n",
-    "# Step 5: Perform the ADM-to-BSSN conversion for 3-metric, extrinsic curvature, and gauge quantities \\[Back to [top](#toc)\\]\n",
+    "# Step 5: Call functions within [`BSSN.BSSN_in_terms_of_ADM.BSSN_in_terms_of_ADM`](../edit/BSSN/BSSN_in_terms_of_ADM.py) ([**tutorial**](BSSN_in_terms_of_ADM.ipynb)) to perform the ADM-to-BSSN conversion \\[Back to [top](#toc)\\]\n",
     "$$\\label{adm2bssn}$$\n",
     "\n",
-    "All ADM quantities were input into this function in the Spherical or Cartesian basis, as functions of $r,\\theta,\\phi$ or $x,y,z$, respectively. In [Step 3](#admfunc) and [Step 4](#adm_jacobian) above, we converted them to the `xx0,xx1,xx2` basis, and as functions of `xx0,xx1,xx2`. Here we convert ADM quantities to their BSSN Curvilinear counterparts.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='adm2bssn_gamma'></a>\n",
-    "\n",
-    "## Step 5.a: Convert ADM $\\gamma_{ij}$ to BSSN $\\bar{\\gamma}_{ij}$ \\[Back to [top](#toc)\\]\n",
-    "$$\\label{adm2bssn_gamma}$$\n",
-    "\n",
-    "We have (Eqs. 2 and 3 of [Ruchlin *et al.*](https://arxiv.org/pdf/1712.07658.pdf)):\n",
-    "$$\n",
-    "\\bar{\\gamma}_{i j} = \\left(\\frac{\\bar{\\gamma}}{\\gamma}\\right)^{1/3} \\gamma_{ij},\n",
-    "$$\n",
-    "where we always make the choice $\\bar{\\gamma} = \\hat{\\gamma}$:"
+    "All ADM quantities were input into this function in the Spherical or Cartesian basis, as functions of $r,\\theta,\\phi$ or $x,y,z$, respectively. In [Step 3](#admfunc) and [Step 4](#adm_jacobian) above, we converted them to the `xx0,xx1,xx2` basis, and as functions of `xx0,xx1,xx2`. Here we convert ADM 3-metric, extrinsic curvature, and gauge quantities in the `xx0,xx1,xx2` (a.k.a. \"rfm\") basis to their BSSN Curvilinear counterparts, in the same basis."
    ]
   },
   {
@@ -303,221 +274,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 3: All ADM quantities were input into this function in the Spherical or Cartesian\n",
-    "#         basis, as functions of r,th,ph or x,y,z, respectively. In Steps 1 and 2 above,\n",
-    "#         we converted them to the xx0,xx1,xx2 basis, and as functions of xx0,xx1,xx2.\n",
-    "#         Here we convert ADM quantities to their BSSN Curvilinear counterparts:\n",
-    "\n",
-    "# Step 3.1: Convert ADM $\\gamma_{ij}$ to BSSN $\\bar{gamma}_{ij}$:\n",
-    "#           We have (Eqs. 2 and 3 of [Ruchlin *et al.*](https://arxiv.org/pdf/1712.07658.pdf)):\n",
-    "\n",
-    "# \\bar{gamma}_{ij} = (\\frac{\\bar{gamma}}{gamma})^{1/3}*gamma_{ij}.\n",
-    "gammaUU, gammaDET = ixp.symm_matrix_inverter3x3(gammaDD)\n",
-    "gammabarDD = ixp.zerorank2()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        gammabarDD[i][j] = (rfm.detgammahat/gammaDET)**(sp.Rational(1,3))*gammaDD[i][j]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='admexcurv_convert'></a>\n",
-    "\n",
-    "## Step 5.b: Convert the ADM extrinsic curvature $K_{ij}$ \\[Back to [top](#toc)\\]\n",
-    "$$\\label{admexcurv_convert}$$\n",
-    "\n",
-    "Convert the ADM extrinsic curvature $K_{ij}$ to the trace-free extrinsic curvature $\\bar{A}_{ij}$, plus the trace of the extrinsic curvature $K$, where (Eq. 3 of [Baumgarte *et al.*](https://arxiv.org/pdf/1211.6632.pdf)):\n",
-    "\\begin{align}\n",
-    "K &= \\gamma^{ij} K_{ij} \\\\\n",
-    "\\bar{A}_{ij} &= \\left(\\frac{\\bar{\\gamma}}{\\gamma}\\right)^{1/3} \\left(K_{ij} - \\frac{1}{3} \\gamma_{ij} K \\right)\n",
-    "\\end{align}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 3.2: Convert the extrinsic curvature K_{ij} to the trace-free extrinsic \n",
-    "#           curvature \\bar{A}_{ij}, plus the trace of the extrinsic curvature K, \n",
-    "#           where (Eq. 3 of [Baumgarte *et al.*](https://arxiv.org/pdf/1211.6632.pdf)):\n",
-    "\n",
-    "# K = gamma^{ij} K_{ij}, and\n",
-    "# \\bar{A}_{ij} &= (\\frac{\\bar{gamma}}{gamma})^{1/3}*(K_{ij} - \\frac{1}{3}*gamma_{ij}*K)\n",
-    "trK = sp.sympify(0)\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        trK += gammaUU[i][j]*KDD[i][j]\n",
-    "\n",
-    "AbarDD = ixp.zerorank2()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        AbarDD[i][j] = (rfm.detgammahat/gammaDET)**(sp.Rational(1,3))*(KDD[i][j] - sp.Rational(1,3)*gammaDD[i][j]*trK)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='lambda'></a>\n",
-    "\n",
-    "## Step 5.c: Define $\\bar{\\Lambda}^i$ \\[Back to [top](#toc)\\]\n",
-    "$$\\label{lambda}$$\n",
-    "\n",
-    "To define $\\bar{\\Lambda}^i$ we implement Eqs. 4 and 5 of [Baumgarte *et al.*](https://arxiv.org/pdf/1211.6632.pdf):\n",
-    "$$\n",
-    "\\bar{\\Lambda}^i = \\bar{\\gamma}^{jk}\\left(\\bar{\\Gamma}^i_{jk} - \\hat{\\Gamma}^i_{jk}\\right).\n",
-    "$$\n",
-    "\n",
-    "The [reference_metric.py](../edit/reference_metric.py) module provides us with analytic expressions for $\\hat{\\Gamma}^i_{jk}$, so here we need only compute analytical expressions for $\\bar{\\Gamma}^i_{jk}$, based on the exact values provided in the initial data:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 3.3: Define \\bar{Lambda}^i (Eqs. 4 and 5 of [Baumgarte *et al.*](https://arxiv.org/pdf/1211.6632.pdf)):\n",
-    "\n",
-    "# \\bar{Lambda}^i = \\bar{gamma}^{jk}(\\bar{Gamma}^i_{jk} - \\hat{Gamma}^i_{jk}).\n",
-    "gammabarUU, gammabarDET = ixp.symm_matrix_inverter3x3(gammabarDD)\n",
-    "\n",
-    "# First compute Christoffel symbols \\bar{Gamma}^i_{jk}, with respect to barred metric:\n",
-    "GammabarUDD = ixp.zerorank3()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        for k in range(DIM):\n",
-    "            for l in range(DIM):\n",
-    "                GammabarUDD[i][j][k] += sp.Rational(1,2)*gammabarUU[i][l]*( sp.diff(gammabarDD[l][j],rfm.xx[k]) +\n",
-    "                                                                            sp.diff(gammabarDD[l][k],rfm.xx[j]) -\n",
-    "                                                                            sp.diff(gammabarDD[j][k],rfm.xx[l]) )\n",
-    "# Next evaluate \\bar{Lambda}^i, based on GammabarUDD above and GammahatUDD \n",
-    "#       (from the reference metric):\n",
-    "LambdabarU = ixp.zerorank1()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        for k in range(DIM):\n",
-    "            LambdabarU[i] += gammabarUU[j][k] * (GammabarUDD[i][j][k] - rfm.GammahatUDD[i][j][k])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='conformal'></a>\n",
-    "\n",
-    "## Step 5.d: Define the conformal factor variable `cf` \\[Back to [top](#toc)\\]\n",
-    "$$\\label{conformal}$$\n",
-    "\n",
-    "We define the conformal factor variable `cf` based on the setting of the `\"BSSN_quantities::EvolvedConformalFactor_cf\"` parameter.\n",
-    "\n",
-    "For example if `\"BSSN_quantities::EvolvedConformalFactor_cf\"` is set to `\"phi\"`, we can use Eq. 3 of [Ruchlin *et al.*](https://arxiv.org/pdf/1712.07658.pdf), which in arbitrary coordinates is written:\n",
-    "\n",
-    "$$\n",
-    "\\phi = \\frac{1}{12} \\log\\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right).\n",
-    "$$\n",
-    "\n",
-    "Alternatively if `\"BSSN_quantities::EvolvedConformalFactor_cf\"` is set to `\"chi\"`, then\n",
-    "$$\n",
-    "\\chi = e^{-4 \\phi} = \\exp\\left(-4 \\frac{1}{12} \\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)\\right) \n",
-    "= \\exp\\left(-\\frac{1}{3} \\log\\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)\\right) = \\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)^{-1/3}.\n",
-    "$$\n",
-    "\n",
-    "Finally if `\"BSSN_quantities::EvolvedConformalFactor_cf\"` is set to `\"W\"`, then\n",
-    "$$\n",
-    "W = e^{-2 \\phi} = \\exp\\left(-2 \\frac{1}{12} \\log\\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)\\right) = \n",
-    "\\exp\\left(-\\frac{1}{6} \\log\\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)\\right) = \n",
-    "\\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)^{-1/6}.\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 3.4: Set the conformal factor variable cf, which is set \n",
-    "#           by the \"BSSN_quantities::EvolvedConformalFactor_cf\" parameter. For example if \n",
-    "#           \"EvolvedConformalFactor_cf\" is set to \"phi\", we can use Eq. 3 of \n",
-    "#           [Ruchlin *et al.*](https://arxiv.org/pdf/1712.07658.pdf), \n",
-    "#           which in arbitrary coordinates is written:\n",
-    "\n",
-    "# phi = \\frac{1}{12} log(\\frac{gamma}{\\bar{gamma}}).\n",
-    "\n",
-    "# Alternatively if \"BSSN_quantities::EvolvedConformalFactor_cf\" is set to \"chi\", then\n",
-    "\n",
-    "# chi = exp(-4*phi) = exp(-4*\\frac{1}{12}*(\\frac{gamma}{\\bar{gamma}}))\n",
-    "#      = exp(-\\frac{1}{3}*log(\\frac{gamma}{\\bar{gamma}})) = (\\frac{gamma}{\\bar{gamma}})^{-1/3}.\n",
-    "#\n",
-    "# Finally if \"BSSN_quantities::EvolvedConformalFactor_cf\" is set to \"W\", then\n",
-    "\n",
-    "# W = exp(-2*phi) = exp(-2*\\frac{1}{12}*log(\\frac{gamma}{\\bar{gamma}})) \n",
-    "#   = exp(-\\frac{1}{6}*log(\\frac{gamma}{\\bar{gamma}})) = (\\frac{gamma}{bar{gamma}})^{-1/6}.\n",
-    "\n",
-    "cf = sp.sympify(0)\n",
-    "\n",
-    "if par.parval_from_str(\"EvolvedConformalFactor_cf\") == \"phi\":\n",
-    "    cf = sp.Rational(1,12)*sp.log(gammaDET/gammabarDET)\n",
-    "elif par.parval_from_str(\"EvolvedConformalFactor_cf\") == \"chi\":\n",
-    "    cf = (gammaDET/gammabarDET)**(-sp.Rational(1,3))\n",
-    "elif par.parval_from_str(\"EvolvedConformalFactor_cf\") == \"W\":\n",
-    "    cf = (gammaDET/gammabarDET)**(-sp.Rational(1,6))\n",
-    "else:\n",
-    "    print(\"Error EvolvedConformalFactor_cf type = \\\"\"+par.parval_from_str(\"EvolvedConformalFactor_cf\")+\"\\\" unknown.\")\n",
-    "    exit(1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='rescale'></a>\n",
-    "\n",
-    "# Step 6: Rescale tensorial quantities \\[Back to [top](#toc)\\]\n",
-    "$$\\label{rescale}$$\n",
-    "\n",
-    "We rescale tensorial quantities according to the prescription described in the [the covariant BSSN formulation tutorial](Tutorial-BSSN_formulation.ipynb) (also [Ruchlin *et al.*](https://arxiv.org/pdf/1712.07658.pdf)):\n",
-    "\\begin{align}\n",
-    "h_{ij} &= (\\bar{\\gamma}_{ij} - \\hat{\\gamma}_{ij})/\\text{ReDD[i][j]}\\\\\n",
-    "a_{ij} &= \\bar{A}_{ij}/\\text{ReDD[i][j]}\\\\\n",
-    "\\lambda^i &= \\bar{\\Lambda}^i/\\text{ReU[i]}\\\\\n",
-    "\\mathcal{V}^i &= \\beta^i/\\text{ReU[i]}\\\\\n",
-    "\\mathcal{B}^i &= B^i/\\text{ReU[i]}\\\\\n",
-    "\\end{align}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 4: Rescale tensorial quantities according to the prescription described in \n",
-    "#         the [BSSN in curvilinear coordinates tutorial module](Tutorial-BSSNCurvilinear.ipynb) \n",
-    "#         (also [Ruchlin *et al.*](https://arxiv.org/pdf/1712.07658.pdf)):\n",
-    "#\n",
-    "# h_{ij} = (\\bar{gamma}_{ij} - \\hat{gamma}_{ij})/(ReDD[i][j])\n",
-    "# a_{ij} = \\bar{A}_{ij}/(ReDD[i][j])\n",
-    "# \\lambda^i = \\bar{Lambda}^i/(ReU[i])\n",
-    "# \\mathcal{V}^i &= beta^i/(ReU[i])\n",
-    "# \\mathcal{B}^i &= B^i/(ReU[i])\n",
-    "hDD     = ixp.zerorank2()\n",
-    "aDD     = ixp.zerorank2()\n",
-    "lambdaU = ixp.zerorank1()\n",
-    "vetU    = ixp.zerorank1()\n",
-    "betU    = ixp.zerorank1()\n",
-    "for i in range(DIM):\n",
-    "    lambdaU[i] = LambdabarU[i] / rfm.ReU[i]\n",
-    "    vetU[i]    =      betaU[i] / rfm.ReU[i]\n",
-    "    betU[i]    =         BU[i] / rfm.ReU[i]\n",
-    "    for j in range(DIM):\n",
-    "        hDD[i][j] = (gammabarDD[i][j] - rfm.ghatDD[i][j]) / rfm.ReDD[i][j]\n",
-    "        aDD[i][j] =                          AbarDD[i][j] / rfm.ReDD[i][j]"
+    "import BSSN.BSSN_in_terms_of_ADM as BitoA\n",
+    "BitoA.gammabarDD_hDD(                   gammaDD)\n",
+    "BitoA.trK_AbarDD_aDD(                   gammaDD,KDD)\n",
+    "BitoA.LambdabarU_lambdaU__exact_gammaDD(gammaDD)\n",
+    "BitoA.cf_from_gammaDD(                  gammaDD)\n",
+    "BitoA.betU_vetU(                        betaU,BU)\n",
+    "hDD     = BitoA.hDD\n",
+    "trK     = BitoA.trK\n",
+    "aDD     = BitoA.aDD\n",
+    "lambdaU = BitoA.lambdaU\n",
+    "cf      = BitoA.cf\n",
+    "vetU    = BitoA.vetU\n",
+    "betU    = BitoA.betU"
    ]
   },
   {
@@ -526,7 +295,7 @@
    "source": [
     "<a id='code_validation'></a>\n",
     "\n",
-    "# Step 7: Code Validation against `BSSN.ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear` module \\[Back to [top](#toc)\\] \n",
+    "# Step 6: Code Validation against `BSSN.ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear` module \\[Back to [top](#toc)\\] \n",
     "$$\\label{code_validation}$$\n",
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for BrillLindquist initial data between\n",
@@ -538,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +382,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 8: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 7: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename [Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.pdf](Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
@@ -621,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +398,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb to latex\n",
-      "[NbConvertApp] Writing 73150 bytes to Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.tex\n",
+      "[NbConvertApp] Writing 50344 bytes to Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
