GiRaFFE/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb: Finished writing the unit test, fixed several errors preventing accurate results.

--- a/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
+++ b/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
@@ -169,12 +169,6 @@
     "# Let's also add some standard NRPy+ macros here. We can also use IDX3 here\n",
     "# to define and index that we'll keep reusing.\n",
     "Stilde_flux_string_pre = \"\"\"\n",
-    "#define IDX4(g,i,j,k) \\\n",
-    "( (i) + Nxx_plus_2NGHOSTS[0] * ( (j) + Nxx_plus_2NGHOSTS[1] * ( (k) + Nxx_plus_2NGHOSTS[2] * (g) ) ) )\n",
-    "#define IDX3(i,j,k) ( (i) + Nxx_plus_2NGHOSTS[0] * ( (j) + Nxx_plus_2NGHOSTS[1] * (k) ) )\n",
-    "// Assuming idx = IDX3(i,j,k). Much faster if idx can be reused over and over:\n",
-    "#define IDX4pt(g,idx)   ( (idx) + (Nxx_plus_2NGHOSTS[0]*Nxx_plus_2NGHOSTS[1]*Nxx_plus_2NGHOSTS[2]) * (g) )\n",
-    "\n",
     "//-----------------------------------------------------------------------------\n",
     "// Compute the flux for advecting S_i .\n",
     "//-----------------------------------------------------------------------------\n",
@@ -236,18 +230,7 @@
     "Stilde_flux_string_pre += \"\"\"\n",
     "  // Compute face velocities\n",
     "  // Begin by computing u0\n",
-    "  pointwisecalc_u0(auxevol_gfs[IDX4pt(VALENCIAV_RU0GF,idx)],auxevol_gfs[IDX4pt(VALENCIAV_RU1GF,idx)],\n",
-    "                   auxevol_gfs[IDX4pt(VALENCIAV_RU2GF,idx)],auxevol_gfs[IDX4pt(U4UPPERZERO_RGF,idx)],\n",
-    "                   auxevol_gfs[IDX4pt(GAMMA_FACEDD00GF,idx)],auxevol_gfs[IDX4pt(GAMMA_FACEDD01GF,idx)],\n",
-    "                   auxevol_gfs[IDX4pt(GAMMA_FACEDD02GF,idx)],auxevol_gfs[IDX4pt(GAMMA_FACEDD11GF,idx)],\n",
-    "                   auxevol_gfs[IDX4pt(GAMMA_FACEDD12GF,idx)],auxevol_gfs[IDX4pt(GAMMA_FACEDD22GF,idx)],\n",
-    "                   auxevol_gfs[IDX4pt(ALPHA_FACEGF,idx)])\n",
-    "  pointwisecalc_u0(auxevol_gfs[IDX4pt(VALENCIAV_LU0GF,idx)],auxevol_gfs[IDX4pt(VALENCIAV_LU1GF,idx)],\n",
-    "                   auxevol_gfs[IDX4pt(VALENCIAV_LU2GF,idx)],auxevol_gfs[IDX4pt(U4UPPERZERO_LGF,idx)],\n",
-    "                   auxevol_gfs[IDX4pt(GAMMA_FACEDD00GF,idx)],auxevol_gfs[IDX4pt(GAMMA_FACEDD01GF,idx)],\n",
-    "                   auxevol_gfs[IDX4pt(GAMMA_FACEDD02GF,idx)],auxevol_gfs[IDX4pt(GAMMA_FACEDD11GF,idx)],\n",
-    "                   auxevol_gfs[IDX4pt(GAMMA_FACEDD12GF,idx)],auxevol_gfs[IDX4pt(GAMMA_FACEDD22GF,idx)],\n",
-    "                   auxevol_gfs[IDX4pt(ALPHA_FACEGF,idx)])\n",
+    "  pointwisecalc_u0(idx,auxevol_gfs);\n",
     "\"\"\""
    ]
   },
@@ -257,16 +240,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: include our u0 calculator in a form that can operate on l/r faces\n",
     "Stilde_flux_string_pre = \"\"\"\n",
-    "static inline void pointwisecalc_u0(int &ValenciavU0,int &ValenciavU1, \n",
-    "                                    int &ValenciavU2, int &u0,\n",
-    "                                    const REAL gammaDD00,const REAL gammaDD01,\n",
-    "                                    const REAL gammaDD02,const REAL gammaDD11,\n",
-    "                                    const REAL gammaDD12,const REAL gammaDD22,\n",
-    "                                    const REAL alpha) {\n",
+    "#ifndef POINTWISE\n",
+    "#define POINTWISE\n",
+    "static inline void pointwisecalc_u0(const int idx,REAL *auxevol_gfs) {\n",
+    "    // Speed limit on the right face:\n",
+    "    REAL u0;\n",
+    "    REAL ValenciavU0 = auxevol_gfs[IDX4pt(VALENCIAV_RU0GF,idx)];\n",
+    "    REAL ValenciavU1 = auxevol_gfs[IDX4pt(VALENCIAV_RU1GF,idx)];\n",
+    "    REAL ValenciavU2 = auxevol_gfs[IDX4pt(VALENCIAV_RU2GF,idx)];\n",
+    "    REAL alpha = auxevol_gfs[IDX4pt(ALPHA_FACEGF,idx)];\n",
+    "    const REAL gammaDD00 = auxevol_gfs[IDX4pt(GAMMA_FACEDD00GF,idx)];\n",
+    "    const REAL gammaDD01 = auxevol_gfs[IDX4pt(GAMMA_FACEDD01GF,idx)];\n",
+    "    const REAL gammaDD02 = auxevol_gfs[IDX4pt(GAMMA_FACEDD02GF,idx)];\n",
+    "    const REAL gammaDD11 = auxevol_gfs[IDX4pt(GAMMA_FACEDD11GF,idx)];\n",
+    "    const REAL gammaDD12 = auxevol_gfs[IDX4pt(GAMMA_FACEDD12GF,idx)];\n",
+    "    const REAL gammaDD22 = auxevol_gfs[IDX4pt(GAMMA_FACEDD22GF,idx)];\n",
+    "\n",
+    "    {\n",
     "    #include \"../computeu0_Cfunction.h\"\n",
+    "    }\n",
+    "\n",
+    "    auxevol_gfs[IDX4pt(U4UPPERZERO_RGF,idx)] = u0;\n",
+    "    auxevol_gfs[IDX4pt(VALENCIAV_RU0GF,idx)] = ValenciavU0;\n",
+    "    auxevol_gfs[IDX4pt(VALENCIAV_RU1GF,idx)] = ValenciavU1;\n",
+    "    auxevol_gfs[IDX4pt(VALENCIAV_RU2GF,idx)] = ValenciavU2;\n",
+    "    \n",
+    "    // Speed limit on the left face:\n",
+    "    ValenciavU0 = auxevol_gfs[IDX4pt(VALENCIAV_LU0GF,idx)];\n",
+    "    ValenciavU1 = auxevol_gfs[IDX4pt(VALENCIAV_LU1GF,idx)];\n",
+    "    ValenciavU2 = auxevol_gfs[IDX4pt(VALENCIAV_LU2GF,idx)];\n",
+    "\n",
+    "    {\n",
+    "    #include \"../computeu0_Cfunction.h\"\n",
+    "    }\n",
+    "\n",
+    "    auxevol_gfs[IDX4pt(U4UPPERZERO_LGF,idx)] = u0;\n",
+    "    auxevol_gfs[IDX4pt(VALENCIAV_LU0GF,idx)] = ValenciavU0;\n",
+    "    auxevol_gfs[IDX4pt(VALENCIAV_LU1GF,idx)] = ValenciavU1;\n",
+    "    auxevol_gfs[IDX4pt(VALENCIAV_LU2GF,idx)] = ValenciavU2;\n",
     "}\n",
+    "#endif\n",
     "\n",
     "\"\"\" + Stilde_flux_string_pre\n"
    ]
@@ -477,7 +491,7 @@
     "    psim4 = gammadet**sp.Rational(1,3)\n",
     "    a = 1/(lapse*lapse)\n",
     "    b = 2 * shifti /(lapse*lapse)\n",
-    "    c = psim4*gupii - shifti*shifti/(lapse*lapse)\n",
+    "    c = - psim4*gupii + shifti*shifti/(lapse*lapse)\n",
     "    detm = b*b - 4*a*c\n",
     "    detm = sp.sqrt(sp.Rational(1,2)*(detm + sp.Abs(detm)))\n",
     "    cplus  = sp.Rational(1,2)*(-b/a + detm/a)\n",
@@ -677,12 +691,11 @@
     "\n",
     "Finally, we can compute the flux in each direction. This momentum flux in the $m$ direction is defined as $\\alpha \\sqrt{\\gamma} T^m_{\\ \\ j}$. We have already defined $\\alpha \\sqrt{\\gamma}$, so all we need to do is calculate $T^m_{\\ \\ j}$. We will do so in accordance with the method published by [Harten, Lax, and von Leer](https://epubs.siam.org/doi/pdf/10.1137/1025002)  and [Einfeldt](https://epubs.siam.org/doi/10.1137/0725021) (hereafter HLLE) to solve the Riemann problem. So, we define $f(u) = T^m_{\\ \\ j}$ on each face as \n",
     "$$\n",
-    "f = \\alpha \\sqrt{\\gamma} \\left( (\\rho+b^2)(u^0 u^j) u_x + (P+\\frac{1}{2}b^2) \\delta_{jx} - b^j b_x \\right);\n",
+    "f = \\alpha \\sqrt{\\gamma} \\left( (\\rho+b^2)(u^0 v^j) u_x + (P+\\frac{1}{2}b^2) \\delta_{jx} - b^j b_x \\right);\n",
     "$$\n",
-    "we use $j$ to correspond to the direction in which we are calculating the flux, based on the input `flux_dirn`; that is, $j=1$ corresponds to $x$, and so forth. $\\delta_{ij}$ is the standard Kronecker delta. We also define `st_x_r` and `st_x_l` (called $u_{\\rm R}$ and $u_{\\rm L}$ in HLL; we'll not do that, since we're using $u$ for four-velocity):\n",
+    "we use $j$ to correspond to the direction in which we are calculating the flux, based on the input `flux_dirn`; that is, $j=1$ corresponds to $x$, and so forth. $\\delta_{ij}$ is the standard Kronecker delta. Here, $v^j$ is the drift velocity $u^j/u^0$, which will offer a minor simplification, because $u^0 v^j = u^j$. We also define `st_x_r` and `st_x_l` (called $u_{\\rm R}$ and $u_{\\rm L}$ in HLL; we'll not do that, since we're using $u$ for four-velocity):\n",
     "$$\n",
-    "{\\rm st\\_x} = \\alpha \\sqrt{\\gamma} \\left( (\\rho+b^2) u^0 \n",
-    "u_x - b^t b_x \\right)\n",
+    "{\\rm st\\_x} = \\alpha \\sqrt{\\gamma} \\left( (\\rho+b^2) u^0 u_x - b^t b_x \\right)\n",
     "$$\n",
     "and combine based on eq. 3.15 in the HLLE paper,\n",
     "$$\n",
@@ -715,7 +728,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Several cells farther down are dedicated to repeating the above in the y and z directions. However, with the power of NRPy+, we will loop over `flux_dirn` and write three versions of this function. We'll write this as a function so that we can write it alongside its documentation and corresonding code from the original `GiRaFFE`, but call it multiple times to fill out the entire code."
+    "Several cells farther down are dedicated to repeating the above in the y and z directions. However, with the power of NRPy+, we will loop over `flux_dirn` and write three versions of the flux function. We'll write the HLLE step as a function so that we can write it alongside its documentation and corresonding code from the original `GiRaFFE`, but call it multiple times to fill out the entire code."
    ]
   },
   {
@@ -739,12 +752,12 @@
     "def HLLE_solver(flux_dirn, mom_comp): \n",
     "    # This solves the Riemann problem for the mom_comp component of the momentum\n",
     "    # flux StildeD in the flux_dirn direction.\n",
-    "    Fr = alpha_sqrt_gamma * (smallb2_r*u4upperZero_r*u_rU[flux_dirn]*u_rD[mom_comp] \n",
+    "    Fr = alpha_sqrt_gamma * (smallb2_r*u_rU[flux_dirn]*u_rD[mom_comp] \n",
     "                             + smallb2_r*kronecker_delta[flux_dirn][mom_comp]/2.0\n",
-    "                             + smallb4_rU[flux_dirn+1]*smallb4_rD[mom_comp+1])\n",
-    "    Fl = alpha_sqrt_gamma * (smallb2_l*u4upperZero_l*u_rU[flux_dirn]*u_lD[mom_comp] \n",
+    "                             - smallb4_rU[flux_dirn+1]*smallb4_rD[mom_comp+1])\n",
+    "    Fl = alpha_sqrt_gamma * (smallb2_l*u_rU[flux_dirn]*u_lD[mom_comp] \n",
     "                             + smallb2_l*kronecker_delta[flux_dirn][mom_comp]/2.0\n",
-    "                             + smallb4_lU[flux_dirn+1]*smallb4_lD[mom_comp+1])\n",
+    "                             - smallb4_lU[flux_dirn+1]*smallb4_lD[mom_comp+1])\n",
     "    \n",
     "    st_j_r = alpha_sqrt_gamma * (smallb2_r*u4upperZero_r*u_rD[mom_comp] - smallb4_rU[0]*smallb4_rD[mom_comp+1])\n",
     "    st_j_l = alpha_sqrt_gamma * (smallb2_l*u4upperZero_l*u_lD[mom_comp] - smallb4_lU[0]*smallb4_lD[mom_comp+1])\n",
@@ -801,7 +814,7 @@
    "source": [
     "We repeat this step in the $y$ direction:\n",
     "$$\n",
-    "f = \\alpha \\sqrt{\\gamma} \\left( (\\rho+b^2)(u^0 u^j) u_y + (P+\\frac{1}{2}b^2) \\delta_{jy} - b^j b_y \\right);\n",
+    "f = \\alpha \\sqrt{\\gamma} \\left( (\\rho+b^2)(u^0 v^j) u_y + (P+\\frac{1}{2}b^2) \\delta_{jy} - b^j b_y \\right);\n",
     "$$\n",
     "and \n",
     "$$\n",
@@ -843,7 +856,7 @@
    "source": [
     "and in z:\n",
     "$$\n",
-    "f = \\alpha \\sqrt{\\gamma} \\left( (\\rho+b^2)(u^0 u^j) u_z + (P+\\frac{1}{2}b^2) \\delta_{jz} - b^j b_z \\right);\n",
+    "f = \\alpha \\sqrt{\\gamma} \\left( (\\rho+b^2)(u^0 v^j) u_z + (P+\\frac{1}{2}b^2) \\delta_{jz} - b^j b_z \\right);\n",
     "$$\n",
     "and \n",
     "$$\n",
@@ -943,7 +956,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb to latex\n",
-      "[NbConvertApp] Writing 92688 bytes to Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.tex\n",
+      "[NbConvertApp] Writing 92516 bytes to Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
