--- a/Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
+++ b/Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
@@ -52,7 +52,7 @@
     "1. [Step 3](#initialdataadm): Setting ADM variables through initial data solver C function\n",
     "1. [Step 4](#admxx0xx1xx2): Make ADM variables functions of ${\\rm xx0},{\\rm xx1},{\\rm xx2}$ instead of functions of Cartesian or Spherical coordinates\n",
     "1. [Step 5](#adm_jacobian): Applying Jacobian transformations to get in the correct `xx0,xx1,xx2` basis\n",
-    "1. [Step 6](#adm2bssn): Call functions within [`BSSN.BSSN_in_terms_of_ADM`](../edit/BSSN/BSSN_in_terms_of_ADM.py) ([**tutorial**](BSSN_in_terms_of_ADM.ipynb)) to perform the ADM-to-BSSN conversion for all BSSN quantities *except* $\\lambda^i$\n",
+    "1. [Step 6](#adm2bssn): Call functions within [`BSSN.BSSN_in_terms_of_ADM`](../edit/BSSN/BSSN_in_terms_of_ADM.py) ([**tutorial**](Tutorial-BSSN_in_terms_of_ADM.ipynb)) to perform the ADM-to-BSSN conversion for all BSSN quantities *except* $\\lambda^i$\n",
     "1. [Step 7](#adm2bssn_c): Output all ADM-to-BSSN expressions to a C function \n",
     "    1. [Step 7.a](#driver): Output the driver function for the above C function\n",
     "1. [Step 8](#lambda): Compute $\\bar{\\Lambda}^i$ from finite-difference derivatives of rescaled metric quantities\n",
@@ -314,7 +314,7 @@
    "source": [
     "<a id='adm2bssn'></a>\n",
     "\n",
-    "# Step 6: Call functions within [`BSSN.BSSN_in_terms_of_ADM`](../edit/BSSN/BSSN_in_terms_of_ADM.py) ([**tutorial**](BSSN_in_terms_of_ADM.ipynb)) to perform the ADM-to-BSSN conversion for all BSSN quantities *except* $\\lambda^i$ \\[Back to [top](#toc)\\]\n",
+    "# Step 6: Call functions within [`BSSN.BSSN_in_terms_of_ADM`](../edit/BSSN/BSSN_in_terms_of_ADM.py) ([**tutorial**](Tutorial-BSSN_in_terms_of_ADM.ipynb)) to perform the ADM-to-BSSN conversion for all BSSN quantities *except* $\\lambda^i$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{adm2bssn}$$\n",
     "\n",
     "All ADM quantities were input into this function in the Spherical or Cartesian basis, as functions of $r,\\theta,\\phi$ or $x,y,z$, respectively. In [Step 3](#admfunc) and [Step 4](#adm_jacobian) above, we converted them to the `xx0,xx1,xx2` basis, and as functions of `xx0,xx1,xx2`. Here we convert ADM quantities in the `xx0,xx1,xx2` (a.k.a. \"rfm\") basis to their BSSN Curvilinear counterparts, in the same basis. **Note that we withold computation of the BSSN $\\lambda^i$ quantities until [a later section of this notebook](#lambda), as they must be evaluated using finite differences.**"
