IllinoisGRMHD: updated the url used when performing validation to the latest bitbucket commit.

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__Configuration_files.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__Configuration_files.ipynb
@@ -129,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/make.code.defn\n"
+      "Writing ../src/make.code.defn\n"
      ]
     }
    ],
@@ -834,7 +834,7 @@
     "import urllib\n",
     "from os import path\n",
     "\n",
-    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/f4b85afe7bf79ffc785e2dcf4fd1e74312ce2370/IllinoisGRMHD/src/make.code.defn\"\n",
+    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/make.code.defn\"\n",
     "original_IGM_file_name = \"make.code.defn-original\"\n",
     "original_IGM_file_path = os.path.join(IGM_src_dir_path,original_IGM_file_name)\n",
     "\n",
@@ -900,7 +900,7 @@
     "import urllib\n",
     "from os import path\n",
     "\n",
-    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/f4b85afe7bf79ffc785e2dcf4fd1e74312ce2370/IllinoisGRMHD/configuration.ccl\"\n",
+    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/configuration.ccl\"\n",
     "original_IGM_file_name = \"configuration-original.ccl\"\n",
     "original_IGM_file_path = os.path.join(IGM_main_dir_path,original_IGM_file_name)\n",
     "\n",
@@ -966,7 +966,7 @@
     "import urllib\n",
     "from os import path\n",
     "\n",
-    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/f4b85afe7bf79ffc785e2dcf4fd1e74312ce2370/IllinoisGRMHD/interface.ccl\"\n",
+    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/interface.ccl\"\n",
     "original_IGM_file_name = \"interface-original.ccl\"\n",
     "original_IGM_file_path = os.path.join(IGM_main_dir_path,original_IGM_file_name)\n",
     "\n",
@@ -1032,7 +1032,7 @@
     "import urllib\n",
     "from os import path\n",
     "\n",
-    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/f4b85afe7bf79ffc785e2dcf4fd1e74312ce2370/IllinoisGRMHD/param.ccl\"\n",
+    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/param.ccl\"\n",
     "original_IGM_file_name = \"param-original.ccl\"\n",
     "original_IGM_file_path = os.path.join(IGM_main_dir_path,original_IGM_file_name)\n",
     "\n",
@@ -1098,7 +1098,7 @@
     "import urllib\n",
     "from os import path\n",
     "\n",
-    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/f4b85afe7bf79ffc785e2dcf4fd1e74312ce2370/IllinoisGRMHD/schedule.ccl\"\n",
+    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/schedule.ccl\"\n",
     "original_IGM_file_name = \"schedule-original.ccl\"\n",
     "original_IGM_file_path = os.path.join(IGM_main_dir_path,original_IGM_file_name)\n",
     "\n",
@@ -1164,7 +1164,7 @@
     "import urllib\n",
     "from os import path\n",
     "\n",
-    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/f4b85afe7bf79ffc785e2dcf4fd1e74312ce2370/IllinoisGRMHD/code_validation.txt\"\n",
+    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/code_validation.txt\"\n",
     "original_IGM_file_name = \"code_validation-original.txt\"\n",
     "original_IGM_file_path = os.path.join(IGM_main_dir_path,original_IGM_file_name)\n",
     "\n",
@@ -1219,17 +1219,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__Configuration_files.ipynb to latex\n",
-      "[NbConvertApp] Writing 106466 bytes to Tutorial-IllinoisGRMHD__Configuration_files.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__Configuration_files.ipynb to latex\r\n",
+      "[NbConvertApp] Writing 106338 bytes to Tutorial-IllinoisGRMHD__Configuration_files.tex\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n"
      ]
     }
    ],
