--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.ipynb
@@ -162,7 +162,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/driver_conserv_to_prims.C\n"
+      "Writing ../src/driver_conserv_to_prims.C\n"
      ]
     }
    ],
@@ -1174,7 +1174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/harm_primitives_lowlevel.C\n"
+      "Writing ../src/harm_primitives_lowlevel.C\n"
      ]
     }
    ],
@@ -2592,7 +2592,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/harm_primitives_headers.h\n"
+      "Writing ../src/harm_primitives_headers.h\n"
      ]
     }
    ],
@@ -2750,11 +2750,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation test for driver_conserv_to_prims.C: FAILED!\n",
-      "Diff:\n",
-      "51a52,53\n",
-      ">   // FIXME: This is definitely one of the places we need to look at later.\n",
-      ">   //           Will leave this comment to emphasize the \"FIXME\" below.\n"
+      "Validation test for driver_conserv_to_prims.C: PASSED!\n"
      ]
     }
    ],
@@ -2766,7 +2762,7 @@
     "import urllib\n",
     "from os import path\n",
     "\n",
-    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/2b402d7eaf8b177e5979cdfd3b73fd992dd2fa7e/IllinoisGRMHD/src/driver_conserv_to_prims.C\"\n",
+    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/driver_conserv_to_prims.C\"\n",
     "original_IGM_file_name = \"driver_conserv_to_prims-original.C\"\n",
     "original_IGM_file_path = os.path.join(IGM_src_dir_path,original_IGM_file_name)\n",
     "\n",
@@ -2832,7 +2828,7 @@
     "import urllib\n",
     "from os import path\n",
     "\n",
-    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/2b402d7eaf8b177e5979cdfd3b73fd992dd2fa7e/IllinoisGRMHD/src/harm_primitives_lowlevel.C\"\n",
+    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/harm_primitives_lowlevel.C\"\n",
     "original_IGM_file_name = \"harm_primitives_lowlevel-original.C\"\n",
     "original_IGM_file_path = os.path.join(IGM_src_dir_path,original_IGM_file_name)\n",
     "\n",
@@ -2898,7 +2894,7 @@
     "import urllib\n",
     "from os import path\n",
     "\n",
-    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/2b402d7eaf8b177e5979cdfd3b73fd992dd2fa7e/IllinoisGRMHD/src/font_fix_gamma_law.C\"\n",
+    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/font_fix_gamma_law.C\"\n",
     "original_IGM_file_name = \"font_fix_gamma_law-original.C\"\n",
     "original_IGM_file_path = os.path.join(IGM_src_dir_path,original_IGM_file_name)\n",
     "\n",
@@ -2964,7 +2960,7 @@
     "import urllib\n",
     "from os import path\n",
     "\n",
-    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/2b402d7eaf8b177e5979cdfd3b73fd992dd2fa7e/IllinoisGRMHD/src/harm_primitives_headers.h\"\n",
+    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/harm_primitives_headers.h\"\n",
     "original_IGM_file_name = \"harm_primitives_headers-original.h\"\n",
     "original_IGM_file_path = os.path.join(IGM_src_dir_path,original_IGM_file_name)\n",
     "\n",
@@ -3012,14 +3008,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.ipynb to latex\r\n"
+      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.ipynb to latex\r\n",
+      "[NbConvertApp] Writing 168770 bytes to Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.tex\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n"
      ]
     }
    ],
