--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__eigen.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__eigen.ipynb
@@ -269,7 +269,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/eigen.C\n"
+      "Writing ../src/eigen.C\n"
      ]
     }
    ],
@@ -423,7 +423,7 @@
     "import urllib\n",
     "from os import path\n",
     "\n",
-    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/f4b85afe7bf79ffc785e2dcf4fd1e74312ce2370/IllinoisGRMHD/src/eigen.C\"\n",
+    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/eigen.C\"\n",
     "original_IGM_file_name = \"eigen-original.C\"\n",
     "original_IGM_file_path = os.path.join(IGM_src_dir_path,original_IGM_file_name)\n",
     "\n",
@@ -478,17 +478,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__eigen.ipynb to latex\n",
-      "[NbConvertApp] Writing 41121 bytes to Tutorial-IllinoisGRMHD__eigen.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__eigen.ipynb to latex\r\n",
+      "[NbConvertApp] Writing 41648 bytes to Tutorial-IllinoisGRMHD__eigen.tex\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n"
      ]
     }
    ],
