IllinoisGRMHD: updated the url used when performing validation to the latest bitbucket commit.

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__driver_evaluate_MHD_rhs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__driver_evaluate_MHD_rhs.ipynb
@@ -1570,34 +1570,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation test for driver_evaluate_MHD_rhs.C: FAILED!\n",
-      "Diff:\n",
-      "116c116\n",
-      "<   metric[ww]=phi_bssn;     ww++;\n",
-      "---\n",
-      ">   metric[ww]=phi_bssn;ww++;\n",
-      "181c181\n",
-      "<    *    \\partial_y F = [ F(i+1/2,j,k) - F(i-1/2,j,k) ] / dx\n",
-      "---\n",
-      ">    *    \\partial_x F = [ F(i+1/2,j,k) - F(i-1/2,j,k) ] / dx\n",
-      "184c184\n",
-      "<    *    Ai_rhs = \\partial_t A_i = \\epsilon_{ijk} \\psi^{6} (v^j B^k - v^j B^k),\n",
-      "---\n",
-      ">    *    Ai_rhs = \\partial_t A_i = \\epsilon_{ijk} \\psi^{6} v^j B^k,\n",
-      "243c243\n",
-      "<    *    Ai_rhs = \\partial_t A_i = \\epsilon_{ijk} \\psi^{6} (v^j B^k - v^j B^k),\n",
-      "---\n",
-      ">    *    Ai_rhs = \\partial_t A_i = \\epsilon_{ijk} \\psi^{6} v^j B^k,\n",
-      "341c341\n",
-      "<    *    \\partial_t A_i = \\epsilon_{ijk} \\psi^{6} (v^j B^k - v^j B^k),\n",
-      "---\n",
-      ">    *    Ai_rhs = \\partial_t A_i = \\epsilon_{ijk} \\psi^{6} v^j B^k,\n",
-      "457,458c457,458\n",
-      "<    * (i-1/2,j,k-1/2)| {vyrr,vyrl,vylr,vyll,vzrr,vzrl,vzlr,vzll}\n",
-      "<    * (i+1/2,j,k-1/2)| {By_stagger_r,By_stagger_l} (see Table 1 in arXiv:1007.2848)\n",
-      "---\n",
-      ">    * (i-1/2,j,k-1/2)| {vxrr,vxrl,vxlr,vxll,vzrr,vzrl,vzlr,vzll}\n",
-      ">    * (i+1/2,j,k-1/2)| {Bx_stagger_r,Bx_stagger_l} (see Table 1 in arXiv:1007.2848)\n"
+      "Validation test for driver_evaluate_MHD_rhs.C: PASSED!\n"
      ]
     }
    ],
@@ -1609,7 +1582,7 @@
     "import urllib\n",
     "from os import path\n",
     "\n",
-    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/ea4d70af29c988ce25fc5fdba5550e31e52f7df3/IllinoisGRMHD/src/driver_evaluate_MHD_rhs.C\"\n",
+    "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/driver_evaluate_MHD_rhs.C\"\n",
     "original_IGM_file_name = \"driver_evaluate_MHD_rhs-original.C\"\n",
     "original_IGM_file_path = os.path.join(IGM_src_dir_path,original_IGM_file_name)\n",
     "\n",
