Tutorial-BaikalETK: Fix Gamma-driving gauge condition when matter source terms are nonzero

--- a/Tutorial-BaikalETK.ipynb
+++ b/Tutorial-BaikalETK.ipynb
@@ -194,7 +194,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN symbolic expressions in 7.62452602386 seconds.\n"
+      "Finished BSSN symbolic expressions in 3.65271496773 seconds.\n"
      ]
     }
    ],
@@ -228,7 +228,10 @@
     "    Bsest.BSSN_source_terms_for_BSSN_RHSs(T4UU)\n",
     "    rhs.trK_rhs += Bsest.sourceterm_trK_rhs\n",
     "    for i in range(DIM):\n",
-    "        rhs.lambda_rhsU[i] += Bsest.sourceterm_lambda_rhsU[i]\n",
+    "        # Needed for Gamma-driving shift RHSs:\n",
+    "        rhs.Lambdabar_rhsU[i] += Bsest.sourceterm_Lambdabar_rhsU[i]\n",
+    "        # Needed for BSSN RHSs:\n",
+    "        rhs.lambda_rhsU[i]    += Bsest.sourceterm_lambda_rhsU[i]\n",
     "        for j in range(DIM):\n",
     "            rhs.a_rhsDD[i][j] += Bsest.sourceterm_a_rhsDD[i][j]\n",
     "\n",
@@ -461,11 +464,11 @@
       "Generating C code for BSSN RHSs in Cartesian coordinates.\n",
       "Generating C code for Ricci tensor in Cartesian coordinates.\n",
       "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Finished gamma constraint C codegen in 0.493178844452 seconds.\n",
+      "Finished gamma constraint C codegen in 0.418785095215 seconds.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "Finished Hamiltonian & momentum constraint C codegen in 10.8502550125 seconds.\n",
-      "Finished Ricci C codegen in 35.7136950493 seconds.\n",
-      "Finished BSSN_RHS C codegen in 37.522190094 seconds.\n"
+      "Finished Hamiltonian & momentum constraint C codegen in 10.4404850006 seconds.\n",
+      "Finished Ricci C codegen in 30.4998939037 seconds.\n",
+      "Finished BSSN_RHS C codegen in 33.228867054 seconds.\n"
      ]
     }
    ],
@@ -1726,7 +1729,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-BaikalETK.ipynb to latex\n",
-      "[NbConvertApp] Writing 201557 bytes to Tutorial-BaikalETK.tex\n",
+      "[NbConvertApp] Writing 202816 bytes to Tutorial-BaikalETK.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
